# MEK9470

./: .gitignore  Manifest.toml  Project.toml
Re100_method1/system/: blockMeshDict  fvSchemes
Re100_method2/constant/: transportProperties
Re100_method2/system/: controlDict  fvSchemes
Re250_linear/constant/: transportProperties
Re250_linear/system/: controlDict
backStep_Re1000/system/: controlDict  fvSchemes  fvSolution
backStep_Re1000_upwind/system/: fvSchemes
backStep_Re200/constant/: transportProperties
backStep_Re200/system/: controlDict  fvSchemes
backStep_Re200_parabolic/system/: controlDict
examples/: face_indexing_demo.jl  tvd_demo.jl
ldcVerify/: main.py  pyproject.toml
ldcVerify/py/: shenRLDC.py
openfoam/Re1000_linear/system/: controlDict
report/: references.bib  report1.qmd
report2/: .gitignore  references.bib  report2.qmd
scripts/: benchmarking.jl  comparisons.jl  crossplots.jl  example_4-1.jl  example_4-2.jl  example_4-3.jl  example_5-1.jl  example_5-1_tvd.jl  plot_regularize_profile.jl  test_assembly.jl  test_incorrect_coefficient.jl  test_limiters.jl  testing_operators.jl
src/: MEK9470.jl  tools.jl  types.jl
src/Discretizations/: Discretizations.jl
src/Discretizations.jl/: Discretizations.jl
src/LDCPlotting/: crossplots.jl  plotting.jl
src/LDCSolver/: LDCSolver.jl  mesh_utils.jl  operators.jl  solver.jl  types.jl
src/LDCUtils.jl/: flow_functions.jl  solving_utils.jl
test/: Manifest.toml  Project.toml  runtests.jl  test_boundary_conditions.jl  test_face_indexing.jl  test_laplacian.jl  test_tvd_implementation.jl
(+8 files in other folders)
