[project]
name = "ldcverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython>=3.1.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pyyaml>=6.0.2",
    "scipy>=1.13.1",
    "shenfun>=4.2.2",
    "sympy>=1.14.0",
]
